# rules_gapic

./: .gitignore  CHANGELOG.md  README.md  WORKSPACE  repositories.bzl
.github/: CODEOWNERS  sync-repo-settings.yaml
.github/workflows/: ci.yaml
bazel/: BUILD.bazel  README.md
bazel/src/main/java/com/google/api/codegen/bazel/: ApiDir.java  ApiVersionedDir.java  ApisVisitor.java  ArgsParser.java  BUILD.bazel.gapic_api.mustache  BUILD.bazel.raw_api.mustache  BazelBuildFileTemplate.java  BazelBuildFileView.java  BuildFileGenerator.java  Buildozer.java
bazel/src/test/java/com/google/api/codegen/bazel/: BazelBuildFileViewTest.java  BuildFileGeneratorTest.java
csharp/: csharp_gapic.bzl  csharp_gapic_pkg.bzl
go/: go_gapic.bzl  go_gapic_pkg.bzl
java/: java_gapic.bzl  java_gapic_pkg.bzl
java/resources/gradle/gradle/wrapper/: gradle-wrapper.properties
nodejs/: nodejs_gapic.bzl  nodejs_gapic_pkg.bzl
php/: php_gapic.bzl  php_gapic_pkg.bzl
php/resources/: README.md
python/: py_gapic.bzl  py_gapic_pkg.bzl
ruby/: ruby_gapic.bzl  ruby_gapic_pkg.bzl
synth/: BUILD.bazel  README.md  gapic_postprocessor.bzl  gapic_postprocessor.py  synth_repositories.bzl
synth/synthtool/: __init__.py  transforms.py
synth/synthtool/gcp/: __init__.py  gapic_bazel.py
synth/synthtool/languages/: java.py
