load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@synth_pip_deps//:requirements.bzl", "requirement")
load("//synth:gapic_postprocessor.bzl", "postprocessed_gapic_pkg")

py_binary(
    name = "gapic_postprocessor",
    srcs = glob(["**/*.py"]),
    main = "gapic_postprocessor.py",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    imports = ["."],
    deps = [],
)

java_binary(
    name = "google_java_format_binary",
    jvm_flags = ["-Xmx512m"],
    main_class = "com.google.googlejavaformat.java.Main",
    visibility = ["//visibility:public"],
    runtime_deps = ["@google_java_format_all_deps//jar"],
)